--- a/requirements.txt
+++ b/requirements.txt
@@ -8,86 +8,112 @@ asyncssh==2.6.0
 attrs==21.2.0
 bcrypt==3.2.0
 bidict==0.21.2
-black==21.5b2
+black==22.1.0
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+cisco-gnmi==1.0.15
+ciscoconfparse==1.5.46
 click==8.0.1
 colorama==0.4.4
 commonmark==0.9.1
 cryptography==3.4.7
 dill==0.3.3
 distro==1.5.0
+dnspython==2.1.0
 future==0.18.2
-genie==21.5
-genie.libs.clean==21.5
-genie.libs.conf==21.5
-genie.libs.filetransferutils==21.5
-genie.libs.health==21.5
-genie.libs.ops==21.5
-genie.libs.parser==21.5
-genie.libs.sdk==21.5
+genie==22.1
+genie.libs.clean==22.1
+genie.libs.conf==22.1
+genie.libs.filetransferutils==22.1
+genie.libs.health==22.1
+genie.libs.ops==22.1
+genie.libs.parser==22.1
+genie.libs.sdk==22.1.2
+gitdb==4.0.9
+GitPython==3.1.18
+grpcio==1.43.0
 idna==2.10
 isort==5.9.1
 Jinja2==2.11.3
+jsondiff==1.3.0
 jsonpickle==2.0.0
 junit-xml==1.9
+junos-eznc==2.6.2
+loguru==0.5.3
 lxml==4.6.3
-MarkupSafe==2.0.1
+MarkupSafe==1.1.1
 multidict==5.1.0
 mypy-extensions==0.4.3
+napalm==3.3.1
+ncclient==0.6.9
 netaddr==0.8.0
+netmiko==3.4.0
 nornir==3.1.1
+nornir-napalm==0.1.2
 nornir-scrapli==2021.1.30
 nornir-utils==0.1.2
 ntc-templates==1.7.0
+packaging==21.3
 paramiko==2.7.2
-pathspec==0.8.1
+passlib==1.7.4
+pathspec==0.9.0
+platformdirs==2.4.1
 prettytable==2.1.0
+protobuf==3.19.4
 psutil==5.8.0
-pyats==21.5
-pyats.aereport==21.5
-pyats.aetest==21.5
-pyats.async==21.5
-pyats.connections==21.5
-pyats.datastructures==21.5
-pyats.easypy==21.5
-pyats.kleenex==21.5
-pyats.log==21.5
-pyats.reporter==21.5
-pyats.results==21.5
-pyats.tcl==21.5
-pyats.topology==21.5
-pyats.utils==21.5
+pyats==22.1
+pyats.aereport==22.1
+pyats.aetest==22.1
+pyats.async==22.1
+pyats.connections==22.1
+pyats.datastructures==22.1
+pyats.easypy==22.1
+pyats.kleenex==22.1
+pyats.log==22.1
+pyats.reporter==22.1
+pyats.results==22.1
+pyats.tcl==22.1
+pyats.topology==22.1
+pyats.utils==22.1
 pycparser==2.20
+pyeapi==0.8.4
 pyftpdlib==1.5.6
 Pygments==2.9.0
 PyNaCl==1.4.0
+pyparsing==2.4.7
+pyserial==3.5
 python-dotenv==0.17.1
-python-engineio==4.2.0
-python-socketio==5.3.0
+python-engineio==3.14.2
+python-socketio==4.6.1
 PyYAML==5.4.1
 regex==2021.4.4
 requests==2.25.1
 rich==10.2.2
 ruamel.yaml==0.16.13
 ruamel.yaml.clib==0.2.2
-scrapli==2021.7.30a3
-scrapli-cfg==2021.7.30a9
-scrapli-community==2021.1.30
-scrapli-netconf==2021.1.30
+scp==0.14.1
+scrapli==2022.1.30
+scrapli-cfg==2022.1.30
+scrapli-community==2022.1.30
+scrapli-netconf==2022.1.30
 six==1.16.0
+smmap==5.0.0
 ssh2-python==0.26.0
+tenacity==8.0.1
 textfsm==1.1.0
 tftpy==0.8.0
 toml==0.10.2
+tomli==2.0.0
 tqdm==4.61.0
+transitions==0.8.9
 ttp==0.7.1
 typing-extensions==3.10.0.0
-unicon==21.5
-unicon.plugins==21.5
+unicon==22.1
+unicon.plugins==22.1.1
 urllib3==1.26.5
 wcwidth==0.2.5
 xmltodict==0.12.0
 yamllint==1.26.1
+yamlordereddictloader==0.4.0
 yarl==1.6.3
