--- a/003_scrapli_extenstions/003_scrapli_nornir/nornir/inventory/hosts.yaml
+++ b/003_scrapli_extenstions/003_scrapli_nornir/nornir/inventory/hosts.yaml
@@ -1,49 +1,33 @@
 ---
 spine1-nxos:
-  #hostname: 172.29.151.1
-  hostname: nebula.packetflow.co.uk
-  port: 9001
+  hostname: 172.29.151.1
   groups:
     - nxos
 spine2-nxos:
-  #hostname: 172.29.151.2
-  hostname: nebula.packetflow.co.uk
-  port: 9002
+  hostname: 172.29.151.2
   groups:
     - nxos
 leaf1-ios:
-  #hostname: 172.29.151.3
-  hostname: nebula.packetflow.co.uk
-  port: 9003
+  hostname: 172.29.151.3
   groups:
     - iosxe
 leaf2-ios:
-  #hostname: 172.29.151.4
-  hostname: nebula.packetflow.co.uk
-  port: 9004
+  hostname: 172.29.151.4
   groups:
     - iosxe
 leaf3-junos:
-  #hostname: 172.29.151.5
-  hostname: nebula.packetflow.co.uk
-  port: 9005
+  hostname: 172.29.151.5
   groups:
     - junos
 leaf4-junos:
-  #hostname: 172.29.151.6
-  hostname: nebula.packetflow.co.uk
-  port: 9006
+  hostname: 172.29.151.6
   groups:
     - junos
 leaf5-eos:
-  #hostname: 172.29.151.7
-  hostname: nebula.packetflow.co.uk
-  port: 9007
+  hostname: 172.29.151.7
   groups:
     - eos
 leaf6-eos:
-  #hostname: 172.29.151.8
-  hostname: nebula.packetflow.co.uk
-  port: 9008
+  hostname: 172.29.151.8
   groups:
     - eos
